# IMU-Utils

./: .gitmodules  LICENCE  cs3.yaml  docker-compose.yml  readme.md  start_dev.sh
assets/: cover
code_utils/: CMakeLists.txt
code_utils/src/: sumpixel_test.cpp
docker/lab/: lab.dockerfile
imu_utils/: CMakeLists.txt
imu_utils/data/: data_im10a_acc_t.txt  data_im10a_acc_x.txt  data_im10a_acc_y.txt  data_im10a_acc_z.txt  data_im10a_gyr_x.txt  data_im10a_gyr_y.txt  data_im10a_gyr_z.txt  data_im10a_sim_acc_x.txt  data_im10a_sim_acc_y.txt  data_im10a_sim_acc_z.txt  data_im10a_sim_gyr_x.txt  data_im10a_sim_gyr_y.txt  data_im10a_sim_gyr_z.txt  data_imu_acc_x.txt  data_imu_acc_y.txt  data_imu_acc_z.txt  data_imu_gyr_t.txt  data_imu_gyr_x.txt  data_imu_gyr_y.txt  data_imu_gyr_z.txt  data_imu_sim_acc_x.txt  data_imu_sim_acc_y.txt  data_imu_sim_acc_z.txt  data_imu_sim_gyr_x.txt  data_imu_sim_gyr_y.txt  data_imu_sim_gyr_z.txt  im10a_imu_param.yaml  imu_imu_param.yaml
imu_utils/launch/: im10a.launch  imu.launch  imu_bag.launch
imu_utils/scripts/matlab/: all_of_draw_allan.m  all_of_draw_allan_acc.m  allan_with_degree.m  avg_of_all_sensors.m  avg_of_all_sensors_acc.m  draw_allan.m
imu_utils/scripts/python/: draw_allan.py  ideal_allan.py
imu_utils/src/: imu_an.cpp
imu_utils/src/gyr_lib/: allan_gyr.cpp
ros_imu/: CMakeLists.txt  package.xml
ros_imu/launch/: imu.launch
ros_imu/rviz/: imu.rviz
ros_imu/src/: imu_node.cpp
vio_data_simulation/src/: imu.cpp
